make thought whoa_aat?

--- a/wes-hediger-style.css
+++ b/wes-hediger-style.css
@@ -45,7 +45,7 @@ h1 {
   z-index: -1;
   margin-left: 39%;
   margin-top: -2%;
-  background-image: url("pics/happy-dance.gif");
+  background-image: url("pics/whoa_aat.gif");
   background-repeat: no-repeat;
   background-size: contain;
   height:197px;
