--- a/wes-hediger-style.css
+++ b/wes-hediger-style.css
@@ -40,7 +40,7 @@ h1 {
   margin-left: 800px;
 }
 
-#about-button {
+#hide-button {
   padding-left: 25px;
   margin-top: 210px;
   margin-left: 510px;
